[package]
name = "rqueue"
version = "0.1.0"
edition = "2018"

[dependencies]
bytes = "1.0"
log = "0.4.14"
redis = { version = "0.17", features = ["tokio-rt-core", "connection-manager"] }
env_logger = "0.8.3"
serde_json = "1.0.64"
serde = { version = "1.0.125", features = ["derive"] }
serde_derive = "1.0.125"
async-stream = "0.3.0"
futures-core = "0.3.13"
tokio = { version = "0.2", features = ["time"] }
rmp-serde = "0.15"

[dev-dependencies]
criterion = "0.1.0"
ulid = "0.4.1"
tokio = { version = "0.2", features = ["rt-core", "macros", "time"] }
